# SATURNE_simulation

./: .gitignore  README.md  ReadMe.txt  data_traj.txt  export_client.sh  export_server.sh  ros_export_client.sh  ros_export_server.sh  send.sh  ssh_.sh
models/poteaux_foot/: model.config  model.sdf
models/poteaux_rugby/: model.config  model.sdf
models/poteaux_rugby/meshes/: poteaux_foot.dae  poteaux_rugby.dae
models/robot_saturne/: model.config  model.sdf
models/robot_saturne/meshes/: first wheel.blend  terrain.dae  terrain_2.dae  terrain_3.dae
other/: 10-hardware.rules  analyze_map.py  launch_tele.sh  roslib_sample.py  stop_tele.sh
other/line_follow/: CMakeLists.txt  package.xml
other/line_follow/src/: viewer.cpp
other/warthog_arduino/: warthog_arduino.ino
src/: 10-local.rules  update_rules.sh
src/arduino_driver/: CMakeLists.txt  package.xml
src/arduino_driver/src/: driver.cpp
src/encoders/: CMakeLists.txt  package.xml
src/encoders/src/: encoders.cpp
src/ihm/: CMakeLists.txt  conf_saturne.ini  conf_warthog.ini  ihm.launch  package.xml
src/ihm/src/: UTM.h  compass.cpp  compass.h  ihm.cpp  ihm.h  main.cpp  map.cpp  map.h
src/imu_conv/: CMakeLists.txt  package.xml
src/imu_conv/config/: imu_conv.yaml
src/imu_conv/src/: imu_conv_node.cpp
src/light/: CMakeLists.txt  package.xml  pololu.script
src/light/msg/: msg_cmd_lights.msg
src/light/src/: driver.cpp
src/mybot_control/: CMakeLists.txt
src/mybot_control/config/: mybot_control.yaml
src/mybot_control/launch/: mybot_control.launch
src/mybot_description/: CMakeLists.txt
src/mybot_description/meshes/: first_wheel.dae  saturne.dae
src/mybot_description/urdf/: macros.xacro  materials.xacro  mybot.gazebo  mybot.xacro
src/mybot_gazebo/: CMakeLists.txt  terrain.blend
src/mybot_gazebo/config/: imu_conv.yaml
src/mybot_gazebo/launch/: mybot_world.launch
src/mybot_gazebo/worlds/: mybot.world
src/nmea_navsat_driver/launch/: nmea_serial_driver.launch
src/pololu/: CMakeLists.txt  package.xml
src/regul/: CMakeLists.txt  launcher.launch  package.xml  raw.launch
src/roboteq/: CMakeLists.txt  launcher.launch  launcher_pc.launch  lidar.launch  package.xml
src/sensys/: CMakeLists.txt  package.xml
src/sensys/launch/: launcher-sensys.launch
src/sensys/src/: driver.cpp
src/simple_gnss/: CMakeLists.txt  package.xml
src/sonars/: CMakeLists.txt  package.xml
src/twist_conv/: CMakeLists.txt  package.xml
src/velocity_control/: CMakeLists.txt  package.xml  telecommande.launch
src/velodyne_reader/: CMakeLists.txt  launcher.launch  package.xml
(+25 files in other folders)
